# grafika-komputerowa-projekt

./: .gitignore  CMakeLists.txt  README.md
configuration/: root_directory.h.in
models/: Cooling_Tower.mtl
shaders/: axis.vs  contamination.fs  contamination.vs  model.fs  particle.fs  particle.vs  plane.fs
src/: box.hpp  callbacks.cpp  callbacks.hpp  camera.hpp  contamination.cpp  contamination.hpp  gui.cpp  gui.hpp  main.cpp  mesh.hpp  model.cpp  model.hpp  object.hpp  particle_system.cpp  particle_system.hpp  program.hpp  renderer.cpp  renderer.hpp  shader.hpp  texture.hpp  wind_grid.hpp  world_constraints.hpp
